# platform_packages_apps_NetworkLocation

./: Android.bp  AndroidManifest.xml
etc/permissions/: app.grapheneos.networklocation.xml
etc/sysconfig/: app.grapheneos.networklocation.xml
interop/position-estimation_kotlin/: Android.bp
interop/position-estimation_kotlin/src/app/grapheneos/networklocation/interop/position_estimation/: Coordinate.kt  Measurement.kt  Position.kt  PositionEstimation.kt
interop/position-estimation_rust/: Android.bp  Cargo.toml
interop/position-estimation_rust/src/: coordinate.rs  jni.rs  lib.rs  measurement.rs  multilateration.rs  position.rs
proto/: apple_wps.proto
res/xml/: network_security_config.xml
src/app/grapheneos/: Utils.kt
src/app/grapheneos/geocoder/: GeocodeProviderImpl.kt  NominatimGeocoder.kt
src/app/grapheneos/networklocation/: ApplePositioningService.kt  LocationProviderImpl.kt  LocationReportingTask.kt  PositionEstimation.kt  PositioningData.kt  Throttle.kt  TimedLruCache.kt
src/app/grapheneos/networklocation/cell/: AppleCellPositioningService.kt  CellPositioningService.kt  CellPositioningServiceCache.kt  CellTowerScanner.kt
src/app/grapheneos/networklocation/wifi/: AppleWifiPositioningService.kt  LocationReportingTask.kt  WifiApRanger.kt  WifiApScanner.kt  WifiPositioningService.kt  WifiPositioningServiceCache.kt
