# CARGO IS NOT USED FOR BUILDING IN ANDROID, THIS IS ONLY FOR LOCAL DEVELOPMENT.

[package]
name = "position_estimation"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = { path = "../../../../../external/rust/android-crates-io/crates/android_logger" }
env_logger = { path = "../../../../../external/rust/android-crates-io/crates/env_logger" }
itertools = { path = "../../../../../external/rust/android-crates-io/crates/itertools" }
jni = { path = "../../../../../external/rust/android-crates-io/crates/jni" }
log = "0.4"
# log = { path = "../../../../../external/rust/android-crates-io/crates/log" }
rand = { path = "../../../../../external/rust/android-crates-io/crates/rand", features = ["small_rng"] }
